# mini

./: .gitignore  .gitmodules  Makefile  README.md
resources/: config.ini  throwing1.ini  throwing2.ini
src/: CMakeLists.txt  main.cpp  mini.cpp  mini.h
test/: CMakeLists.txt  initializationTest.cpp  objectConstructionTest.cpp  propertiesTest.cpp  readWriteTest.cpp  sectionInsertionTest.cpp  sectionsTest.cpp
